Fixed bug in fit_residual_lenses.py

--- a/wavepytools/metrology/lenses/.fit_residual_lenses.ini
+++ b/wavepytools/metrology/lenses/.fit_residual_lenses.ini
@@ -1,5 +1,5 @@
 [Files]
-file with thickness = /home/grizolli/DATA/zi-dfxm-Apr18/20180418/8keV/TalbotImage_186mm/544/output4p85/TalbotImaging_cb3p43um_halfPi_d186mm_8p0KeV_thickness_03.sdf
+file with thickness = D:/Data/imaging/CB4p8pi_T2_98mm_20s_sample_051_output/TalbotImaging_cb2p40um_Pi_d98mm_9p0KeV_thickness_01.sdf
 
 [Parameters]
 string for titles = Be Lens
