--- a/wavepytools/imaging/single_grating/.singleCheckerboardGratingTalbot_easyqt4.ini
+++ b/wavepytools/imaging/single_grating/.singleCheckerboardGratingTalbot_easyqt4.ini
@@ -1,18 +1,18 @@
 [Files]
-sample = /Users/lrebuffi/Desktop/Xianbo/Wavepy/Data/CB4p8pi_T2_98mm_20s_sample_051.tif
-blank = /Users/lrebuffi/Desktop/Xianbo/Wavepy/Data/dark_20s_000.tif
-reference = /Users/lrebuffi/Desktop/Xianbo/Wavepy/Data/CB4p8pi_T2_98mm_20s_ref_052.tif
+sample = D:/Data/imaging/CB4p8pi_T2_98mm_20s_sample_051.tif
+blank = D:/Data/imaging/dark_20s_000.tif
+reference = D:/Data/imaging/CB4p8pi_T2_98mm_20s_ref_052.tif
 
 [Parameters]
 mode = Relative
 pixel size = 6.5e-07
 chekerboard grating period = 4.8e-06
-pattern = Edge pi
-distance detector to gr = 0.098
-photon energy = 9000.0
+pattern = Diagonal half pi
+distance detector to gr = 0.133
+photon energy = 14000.0
 source distance = 34.0
-crop = 547, 2021, 322, 1795
+crop = 338, 1576, 254, 2530
 crop integration = 0, -1, 0, -1
-lin fitting coef ch = 1005054576.9265217, 1215.0120008564265
-lin fitting coef cv = -698885579.6342622, -845.4574164742575
+lin fitting coef ch = -2177164330.4763145, -3947.1775864052734
+lin fitting coef cv = -2173384231.890299, -3939.0141698245748
 
