Fixed bug in fit_residual_lenses.py

--- a/wavepytools/imaging/single_grating/.response_function.ini
+++ b/wavepytools/imaging/single_grating/.response_function.ini
@@ -1,6 +1,6 @@
 [Files]
-folder with csv files = /home/grizolli/DATA/20181106_1BM_JTEC/20181109/18_diffractedbeam_linearity_varing_crystal_theta/thetaB_11p7820/csv_WF
-target file = /home/grizolli/DATA/20181106_1BM_JTEC/20181109/16_correction/wf_16_corr03.csv
+folder with csv files = D:/Dropbox/Projects/DOE_noninvasive at-wavelength metrology/experiments/Nov2018_1BM/results/RF_diff
+target file = D:/Dropbox/Projects/DOE_noninvasive at-wavelength metrology/experiments/Nov2018_1BM/results/diffracted beam correction/Y_integrated_y_02.csv
 
 [Parameters]
 what2do = Height response function
