--- a/wavepytools/imaging/speckle_tracking/.speckleAnalyses.ini
+++ b/wavepytools/imaging/speckle_tracking/.speckleAnalyses.ini
@@ -1,16 +1,16 @@
 [Files]
-image_filename = /home/grizolli/workspace/pythonWorkspace/imaging/speckle_tracking/14p2KeV_96cm_116cm/BeLensR200um_sandpaper_p2500_10s_lens_004.tif
-ref_filename = /home/grizolli/workspace/pythonWorkspace/imaging/speckle_tracking/14p2KeV_96cm_116cm/BeLensR200um_sandpaper_p2500_10s_no_lens_005.tif
+image_filename = C:/Users/zqiao/Documents/xray_wavefront/speckle_tracking/p2500_step1um_2s_sample_000.tif
+ref_filename = C:/Users/zqiao/Documents/xray_wavefront/speckle_tracking/p2500_step1um_2s_no_sample_000.tif
 
 [Parameters]
-crop = 594, 2024, 224, 1599
+crop = 7, 626, 4, 532
 pixel size = .6500e-6
-photon energy = 14.2
-distance detector to sample = 1.00
+photon energy = 14
+distance detector to sample = 0.17
 halfsubwidth = 50
 halftemplatesize = 0
 npointsmax = 1000
-ncores = 7
+ncores = 1
 ncores of machine = 8
 save hdf5 files = True
 subpixelresolution = 10
