--- a/wavepytools/metrology/lenses/.fit_residual_lenses.ini
+++ b/wavepytools/metrology/lenses/.fit_residual_lenses.ini
@@ -1,9 +1,9 @@
 [Files]
-file with thickness = /home/grizolli/DATA/zi-dfxm-Apr18/20180418/8keV/TalbotImage_186mm/544/output4p85/TalbotImaging_cb3p43um_halfPi_d186mm_8p0KeV_thickness_03.sdf
+file with thickness = C:/Users/zqiao/Documents/xray_wavefront/Jan2020_speckle/20200201/CB4p8_hlafpi_diag_Be_CRL200um/T3_330mm/sample_d330mm_5s_004_output/TalbotImaging_cb3p39um_halfPi_d330mm_14p0KeV_thickness_01.sdf
 
 [Parameters]
 string for titles = Be Lens
-nominal radius for fitting = -2.4999999999999998e-05
-diameter of active area for fitting = 100, 400
+nominal radius for fitting = 9.999999999999999e-05
+diameter of active area for fitting = 800
 lens geometry = 2D Lens Stigmatic Lens
 
