First Commit: Refactored version

--- a/wavepytools/imaging/single_grating/.SingleGrating_nofig.ini
+++ b/wavepytools/imaging/single_grating/.SingleGrating_nofig.ini
@@ -1,7 +1,7 @@
 [Files]
-sample = C:/Users/zqiao/Documents/xray_wavefront/Goldberg/Experiment_A_CB4p8halfpi_170mm_10s/A-0007/A-0007-0005_031.tif
-blank = C:/Users/zqiao/Documents/xray_wavefront/Goldberg/dark_10s.tif
-reference = C:/Users/zqiao/Documents/xray_wavefront/Goldberg/Experiment_A_CB4p8halfpi_170mm_10s/A-0007/A-0007-0003_029.tif
+sample = /Users/lrebuffi/Desktop/grating_200mm/sample_5s_005.tif
+blank = /Users/lrebuffi/Desktop/grating_200mm/dark_5s_004.tif
+reference = /Users/lrebuffi/Desktop/grating_200mm/ref_5s_006.tif
 
 [Parameters]
 mode = Relative
@@ -13,6 +13,6 @@ photon energy = 14000.0
 source distance = 34.0
 crop = 743, 1789, 475, 1670
 crop integration = 0, -1, 0, -1
-lin fitting coef ch = -2177164330.4763145, -3947.1775864052734
-lin fitting coef cv = -2173384231.890299, -3939.0141698245748
+lin fitting coef ch = -1354025817.4351914, -2286.3903341147466
+lin fitting coef cv = -1361274503.1213543, -2313.8263366805286
 
